--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,36 @@
   year={2023},
   abbr={AAAI},
   selected={true},
+  pdf={https://arxiv.org/pdf/2301.07558.pdf},
+  code={https://github.com/bigdata-ustc/QuesCo},
+  poster={AAAI23_QuesCo/AAAI23_QuesCo_poster.pdf},
+  slides={AAAI23_QuesCo/AAAI23_QuesCo_slides.pdf}
 }
+
+@article{ning2023novel,
+  title={A Novel Approach for Auto-Formulation of Optimization Problems},
+  author={Ning, Yuting and Liu, Jiayu and Qin, Longhu and Xiao, Tong and Xue, Shangzi and Huang, Zhenya and Liu, Qi and Chen, Enhong and Wu, Jinze},
+  journal={arXiv preprint arXiv:2302.04643},
+  year={2023},
+  pdf={https://arxiv.org/pdf/2302.04643.pdf},
+  code={https://github.com/bigdata-ustc/nl4opt},
+  abbr={arXiv}
+}
+
+@article{liufederated,
+  title={Federated User Modeling from Hierarchical Information},
+  author={Liu, Qi and Wu, Jinze and Huang, Zhenya and Wang, Hao and Ning, Yuting and Chen, Ming and Chen, Enhong and Yi, Jinfeng and Zhou, Bowen},
+  year = {2023},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  issn = {1046-8188},
+  url = {https://doi.org/10.1145/3560485},
+  doi = {10.1145/3560485},
+  journal={ACM Transactions on Information Systems},
+  month = {feb},
+  abbr={TOIS},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3560485},
+  }
 
 @inproceedings{wu2021hierarchical,
   title={Hierarchical personalized federated learning for user modeling},
@@ -17,6 +46,7 @@
   pages={957--968},
   year={2021},
   abbr={WWW},
+  pdf={http://staff.ustc.edu.cn/~qiliuql/files/Publications/Jinze-Wu-WWW21.pdf}
 }
 
 @inproceedings{ning2021stable,
@@ -27,4 +57,5 @@
   year={2021},
   organization={IEEE},
   abbr={CCIS},
+  pdf={https://ieeexplore.ieee.org/document/9754532}
 }
