--- a/_news/2022-11-19.md
+++ b/_news/2022-11-19.md
@@ -4,4 +4,4 @@ date: 2022-11-19 16:00
 inline: true
 ---
 
-Our paper “Towards a Holistic Understanding of Mathematical Questions with Contrastive Pre-training” is accepted by AAAI 2023.
+Our paper [Towards a Holistic Understanding of Mathematical Questions with Contrastive Pre-training](https://arxiv.org/abs/2301.07558) is accepted by AAAI 2023.
