--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,6 +24,15 @@
   abbr={arXiv}
 }
 
+@article{zhuang2023efficiently,
+  title={Efficiently Measuring the Cognitive Ability of LLMs: An Adaptive Testing Perspective},
+  author={Zhuang, Yan and Liu, Qi and Ning, Yuting and Huang, Weizhe and Lv, Rui and Huang, Zhenya and Zhao, Guanhao and Zhang, Zheng and Mao, Qingyang and Wang, Shijin and others},
+  journal={arXiv preprint arXiv:2306.10512},
+  year={2023},
+  pdf={https://arxiv.org/pdf/2306.10512.pdf},
+  abbr={arXiv}
+}
+
 @article{liufederated,
   title={Federated User Modeling from Hierarchical Information},
   author={Liu, Qi and Wu, Jinze and Huang, Zhenya and Wang, Hao and Ning, Yuting and Chen, Ming and Chen, Enhong and Yi, Jinfeng and Zhou, Bowen},
@@ -38,6 +47,17 @@
   abbr={TOIS},
   pdf={https://dl.acm.org/doi/pdf/10.1145/3560485},
   }
+
+@article{liu2023techpat,
+  title={TechPat: Technical Phrase Extraction for Patent Mining},
+  author={Liu, Ye and Wu, Han and Huang, Zhenya and Wang, Hao and Ning, Yuting and Ma, Jianhui and Liu, Qi and Chen, Enhong},
+  journal={ACM Transactions on Knowledge Discovery from Data},
+  year={2023},
+  publisher={ACM New York, NY},
+  url={https://dl.acm.org/doi/full/10.1145/3596603},
+  abbr={TKDD},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3596603}
+}
 
 @inproceedings{wu2021hierarchical,
   title={Hierarchical personalized federated learning for user modeling},
