--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,8 @@
   year={2023},
   pdf={https://arxiv.org/pdf/2302.04643.pdf},
   code={https://github.com/bigdata-ustc/nl4opt},
-  abbr={arXiv}
+  abbr={arXiv},
+  selected={true}
 }
 
 @article{zhuang2023efficiently,
@@ -30,7 +31,8 @@
   journal={arXiv preprint arXiv:2306.10512},
   year={2023},
   pdf={https://arxiv.org/pdf/2306.10512.pdf},
-  abbr={arXiv}
+  abbr={arXiv},
+  selected={true}
 }
 
 @article{liufederated,
@@ -52,6 +54,17 @@
   url={https://dl.acm.org/doi/full/10.1145/3596603},
   abbr={TKDD},
   pdf={https://dl.acm.org/doi/pdf/10.1145/3596603}
+}
+
+@inproceedings{gong2023beyond,
+  title={Beyond Homophily: Robust Graph Anomaly Detection via Neural Sparsification},
+  author={Gong, Zheng and Wang, Guifeng and Sun, Ying and Liu, Qi and Ning, Yuting and Xiong, Hui and Peng, Jingyu},
+  booktitle={32nd International Joint Conference on Artificial Intelligence, IJCAI 2023},
+  pages={2104--2113},
+  year={2023},
+  organization={International Joint Conferences on Artificial Intelligence},
+  pdf={https://www.ijcai.org/proceedings/2023/0234.pdf},
+  abbr={IJCAI}
 }
 
 @inproceedings{wu2021hierarchical,
