--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
   pdf={https://arxiv.org/pdf/2301.07558.pdf},
   code={https://github.com/bigdata-ustc/QuesCo},
   poster={AAAI23_QuesCo/AAAI23_QuesCo_poster.pdf},
-  slides={AAAI23_QuesCo/AAAI23_QuesCo_slides.pdf}
+  slides={AAAI23_QuesCo/AAAI23_QuesCo_slides.pdf},
 }
 
 @article{ning2023novel,
@@ -22,7 +22,7 @@
   pdf={https://arxiv.org/pdf/2302.04643.pdf},
   code={https://github.com/bigdata-ustc/nl4opt},
   abbr={arXiv},
-  selected={true}
+  selected={true},
 }
 
 @article{zhuang2023efficiently,
@@ -32,7 +32,7 @@
   year={2023},
   pdf={https://arxiv.org/pdf/2306.10512.pdf},
   abbr={arXiv},
-  selected={true}
+  selected={true},
 }
 
 @article{liufederated,
