--- a/_news/2022-12-08.md
+++ b/_news/2022-12-08.md
@@ -4,4 +4,4 @@ date: 2022-12-08 16:00
 inline: true
 ---
 
-Our team, Long, won the 4th and 3rd place for two subtasks respectively in [NL4Opt NeurIPS 2022 competition](https://nl4opt.github.io). Check out our [poster](https://github.com/nnnyt/nl4opt/blob/main/doc/NL4Opt-Long-poster.pdf) and [slides](https://github.com/nnnyt/nl4opt/blob/main/doc/NL4Opt-Long-slides.pdf).
+Our team, Long, won the 4th and 3rd place for two subtasks respectively in [NL4Opt NeurIPS 2022 competition](https://nl4opt.github.io). I will present our solutions in the [workshop](https://neurips.cc/virtual/2022/competition/50079)! Check out our [poster](https://github.com/nnnyt/nl4opt/blob/main/doc/NL4Opt-Long-poster.pdf) and [slides](https://github.com/nnnyt/nl4opt/blob/main/doc/NL4Opt-Long-slides.pdf).
