--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,6 +14,18 @@
   slides={AAAI23_QuesCo/AAAI23_QuesCo_slides.pdf},
 }
 
+@article{li2023search,
+  title={In Search of the Long-Tail: Systematic Generation of Long-Tail Knowledge via Logical Rule Guided Search},
+  author={Li, Huihan and Ning, Yuting and Liao, Zeyi and Wang, Siyuan and Li, Xiang Lorraine and Lu, Ximing and Brahman, Faeze and Zhao, Wenting and Choi, Yejin and Ren, Xiang},
+  journal={arXiv preprint arXiv:2311.07237},
+  year={2023},
+  pdf={https://arxiv.org/pdf/2311.07237.pdf},
+  code={https://github.com/INK-USC/LINK/},
+  dataset={https://zenodo.org/records/10117911},
+  abbr={arXiv},
+  selected={true},
+}
+
 @article{ning2023novel,
   title={A Novel Approach for Auto-Formulation of Optimization Problems},
   author={Ning, Yuting and Liu, Jiayu and Qin, Longhu and Xiao, Tong and Xue, Shangzi and Huang, Zhenya and Liu, Qi and Chen, Enhong and Wu, Jinze},
@@ -22,7 +34,7 @@
   pdf={https://arxiv.org/pdf/2302.04643.pdf},
   code={https://github.com/bigdata-ustc/nl4opt},
   abbr={arXiv},
-  selected={true},
+  selected={false},
 }
 
 @article{zhuang2023efficiently,
