update intro and pub

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,39 @@
 ---
 ---
 
+@article{xiang2024pandora,
+  title={Pandora: Towards General World Model with Natural Language Actions and Video States},
+  author={Jiannan Xiang and Guangyi Liu and Yi Gu and Qiyue Gao and Yuting Ning and Yuheng Zha and Zeyu Feng and Tianhua Tao and Shibo Hao and Yemin Shi and Zhengzhong Liu and Eric P. Xing and Zhiting Hu},
+  year={2024},
+  pdf={https://world-model.maitrix.org/assets/pandora.pdf},
+  website={https://world-model.maitrix.org/},
+  abbr={Preprint},
+  selected={true},
+  code={https://github.com/maitrix-org/Pandora},
+}
+
+@article{huang2024edunlp,
+  title={EduNLP: Towards a Unified and Modularized Library for Educational Resources},
+  author={Huang, Zhenya and Ning, Yuting and Qin, Longhu and Tong, Shiwei and Xue, Shangzi and Xiao, Tong and Lin, Xin and Liu, Jiayu and Liu, Qi and Chen, Enhong and others},
+  journal={arXiv preprint arXiv:2406.01276},
+  year={2024},
+  pdf={https://arxiv.org/pdf/2406.01276},
+  abbr={Preprint},
+  code={https://github.com/bigdata-ustc/EduNLP},
+}
+
+@article{li2023search,
+  title={In Search of the Long-Tail: Systematic Generation of Long-Tail Knowledge via Logical Rule Guided Search},
+  author={Li, Huihan and Ning, Yuting and Liao, Zeyi and Wang, Siyuan and Li, Xiang Lorraine and Lu, Ximing and Brahman, Faeze and Zhao, Wenting and Choi, Yejin and Ren, Xiang},
+  journal={arXiv preprint arXiv:2311.07237},
+  year={2023},
+  pdf={https://arxiv.org/pdf/2311.07237.pdf},
+  code={https://github.com/INK-USC/LINK/},
+  dataset={https://zenodo.org/records/10117911},
+  abbr={Preprint},
+  selected={true},
+}
+
 @inproceedings{ning2023towards,
   title={Towards a Holistic Understanding of Mathematical Questions with Contrastive Pre-training},
   author={Ning, Yuting and Huang, Zhenya and Lin, Xin and Chen, Enhong and Tong, Shiwei and Gong, Zheng and Wang, Shijin},
@@ -14,18 +47,6 @@
   slides={AAAI23_QuesCo/AAAI23_QuesCo_slides.pdf},
 }
 
-@article{li2023search,
-  title={In Search of the Long-Tail: Systematic Generation of Long-Tail Knowledge via Logical Rule Guided Search},
-  author={Li, Huihan and Ning, Yuting and Liao, Zeyi and Wang, Siyuan and Li, Xiang Lorraine and Lu, Ximing and Brahman, Faeze and Zhao, Wenting and Choi, Yejin and Ren, Xiang},
-  journal={arXiv preprint arXiv:2311.07237},
-  year={2023},
-  pdf={https://arxiv.org/pdf/2311.07237.pdf},
-  code={https://github.com/INK-USC/LINK/},
-  dataset={https://zenodo.org/records/10117911},
-  abbr={arXiv},
-  selected={true},
-}
-
 @article{ning2023novel,
   title={A Novel Approach for Auto-Formulation of Optimization Problems},
   author={Ning, Yuting and Liu, Jiayu and Qin, Longhu and Xiao, Tong and Xue, Shangzi and Huang, Zhenya and Liu, Qi and Chen, Enhong and Wu, Jinze},
@@ -33,8 +54,7 @@
   year={2023},
   pdf={https://arxiv.org/pdf/2302.04643.pdf},
   code={https://github.com/bigdata-ustc/nl4opt},
-  abbr={arXiv},
-  selected={false},
+  abbr={Preprint},
 }
 
 @article{zhuang2023efficiently,
@@ -43,7 +63,7 @@
   journal={arXiv preprint arXiv:2306.10512},
   year={2023},
   pdf={https://arxiv.org/pdf/2306.10512.pdf},
-  abbr={arXiv},
+  abbr={Preprint},
   selected={true},
 }
 
