--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,15 +22,15 @@
   code={https://github.com/bigdata-ustc/EduNLP},
 }
 
-@article{li2023search,
+@inproceedings{li2023search,
   title={In Search of the Long-Tail: Systematic Generation of Long-Tail Knowledge via Logical Rule Guided Search},
   author={Li, Huihan and Ning, Yuting and Liao, Zeyi and Wang, Siyuan and Li, Xiang Lorraine and Lu, Ximing and Brahman, Faeze and Zhao, Wenting and Choi, Yejin and Ren, Xiang},
-  journal={arXiv preprint arXiv:2311.07237},
-  year={2023},
+  booktitle={Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing},
+  year={2024},
   pdf={https://arxiv.org/pdf/2311.07237.pdf},
   code={https://github.com/INK-USC/LINK/},
   dataset={https://zenodo.org/records/10117911},
-  abbr={Preprint},
+  abbr={EMNLP},
   selected={true},
 }
 
