--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+@article{chen2024scienceagentbench,
+  title={ScienceAgentBench: Toward Rigorous Assessment of Language Agents for Data-Driven Scientific Discovery},
+  author={Chen, Ziru and Chen, Shijie and Ning, Yuting and Zhang, Qianheng and Wang, Boshi and Yu, Botao and Li, Yifei and Liao, Zeyi and Wei, Chen and Lu, Zitong and others},
+  journal={arXiv preprint arXiv:2410.05080},
+  abbr={Preprint},
+  website={https://osu-nlp-group.github.io/ScienceAgentBench/},
+  pdf={https://arxiv.org/pdf/2410.05080},
+  code={https://github.com/OSU-NLP-Group/ScienceAgentBench},
+  year={2024}
+}
+
 @article{xiang2024pandora,
   title={Pandora: Towards General World Model with Natural Language Actions and Video States},
   author={Jiannan Xiang and Guangyi Liu and Yi Gu and Qiyue Gao and Yuting Ning and Yuheng Zha and Zeyu Feng and Tianhua Tao and Shibo Hao and Yemin Shi and Zhengzhong Liu and Eric P. Xing and Zhiting Hu},
