--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+@article{xue2024decompose,
+  title={Decompose, analyze and rethink: Solving intricate problems with human-like reasoning cycle},
+  author={Xue, Shangzi and Huang, Zhenya and Liu, Jiayu and Lin, Xin and Ning, Yuting and Jin, Binbin and Li, Xin and Liu, Qi},
+  abbr={NeruIPS},
+  journal={Advances in Neural Information Processing Systems},
+  volume={37},
+  pages={357--385},
+  year={2024},
+  pdf={https://proceedings.neurips.cc/paper_files/paper/2024/file/01025a4e79355bb37a10ba39605944b5-Paper-Conference.pdf}
+}
+
 @article{chen2024scienceagentbench,
   title={ScienceAgentBench: Toward Rigorous Assessment of Language Agents for Data-Driven Scientific Discovery},
   author={Chen, Ziru and Chen, Shijie and Ning, Yuting and Zhang, Qianheng and Wang, Boshi and Yu, Botao and Li, Yifei and Liao, Zeyi and Wei, Chen and Lu, Zitong and others},
@@ -14,7 +25,7 @@
 
 @article{xiang2024pandora,
   title={Pandora: Towards General World Model with Natural Language Actions and Video States},
-  author={Jiannan Xiang and Guangyi Liu and Yi Gu and Qiyue Gao and Yuting Ning and Yuheng Zha and Zeyu Feng and Tianhua Tao and Shibo Hao and Yemin Shi and Zhengzhong Liu and Eric P. Xing and Zhiting Hu},
+  author={Jiannan Xiang* and Guangyi Liu* and Yi Gu* and Qiyue Gao and Yuting Ning and Yuheng Zha and Zeyu Feng and Tianhua Tao and Shibo Hao and Yemin Shi and Zhengzhong Liu and Eric P. Xing and Zhiting Hu},
   year={2024},
   pdf={https://world-model.maitrix.org/assets/pandora.pdf},
   website={https://world-model.maitrix.org/},
