update pub & cv

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+@article{gu2024your,
+  title={Is Your LLM Secretly a World Model of the Internet? Model-Based Planning for Web Agents},
+  author={Gu*, Yu and Zhang*, Kai and Ning*, Yuting and Zheng*, Boyuan and Gou, Boyu and Xue, Tianci and Chang, Cheng and Srivastava, Sanjari and Xie, Yanan and Qi, Peng and others},
+  journal={arXiv preprint arXiv:2411.06559},
+  year={2025},
+  abbr={Preprint},
+  pdf={https://arxiv.org/pdf/2411.06559},
+  code={https://github.com/OSU-NLP-Group/WebDreamer},
+  selected={true}
+}
+
 @article{xue2024decompose,
   title={Decompose, analyze and rethink: Solving intricate problems with human-like reasoning cycle},
   author={Xue, Shangzi and Huang, Zhenya and Liu, Jiayu and Lin, Xin and Ning, Yuting and Jin, Binbin and Li, Xin and Liu, Qi},
@@ -15,12 +26,12 @@
 @article{chen2024scienceagentbench,
   title={ScienceAgentBench: Toward Rigorous Assessment of Language Agents for Data-Driven Scientific Discovery},
   author={Chen, Ziru and Chen, Shijie and Ning, Yuting and Zhang, Qianheng and Wang, Boshi and Yu, Botao and Li, Yifei and Liao, Zeyi and Wei, Chen and Lu, Zitong and others},
-  journal={arXiv preprint arXiv:2410.05080},
-  abbr={Preprint},
+  journal={The Thirteenth International Conference on Learning Representations},
+  abbr={ICLR},
   website={https://osu-nlp-group.github.io/ScienceAgentBench/},
   pdf={https://arxiv.org/pdf/2410.05080},
   code={https://github.com/OSU-NLP-Group/ScienceAgentBench},
-  year={2024}
+  year={2025}
 }
 
 @article{xiang2024pandora,
@@ -62,7 +73,6 @@
   booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
   year={2023},
   abbr={AAAI},
-  selected={true},
   pdf={https://arxiv.org/pdf/2301.07558.pdf},
   code={https://github.com/bigdata-ustc/QuesCo},
   poster={AAAI23_QuesCo/AAAI23_QuesCo_poster.pdf},
@@ -86,7 +96,6 @@
   year={2023},
   pdf={https://arxiv.org/pdf/2306.10512.pdf},
   abbr={Preprint},
-  selected={true},
 }
 
 @article{liufederated,
