--- a/_news/2024-06-10.md
+++ b/_news/2024-06-10.md
@@ -4,4 +4,4 @@ date: 2024-06-10 16:00
 inline: true
 ---
 
-Check out [EduNLP](https://arxiv.org/pdf/2406.01276): a unified and modularized library for educational resources. Don't forget to star our [project](https://github.com/bigdata-ustc/EduNLP)!
+Check out 📑[EduNLP](https://arxiv.org/pdf/2406.01276): a unified and modularized library for educational resources. Don't forget to star our [project](https://github.com/bigdata-ustc/EduNLP)!
