--- a/_news/2024-10-07.md
+++ b/_news/2024-10-07.md
@@ -4,4 +4,4 @@ date: 2024-10-07 16:00
 inline: true
 ---
 
-Check out our [ScienceAgentBench](https://osu-nlp-group.github.io/ScienceAgentBench/), a new benchmark to rigorously assess language agents for data-driven scientific discovery.
+Check out our 🔬[ScienceAgentBench](https://osu-nlp-group.github.io/ScienceAgentBench/), a new benchmark to rigorously assess language agents for data-driven scientific discovery.
