--- a/_news/2024-05-24.md
+++ b/_news/2024-05-24.md
@@ -4,4 +4,4 @@ date: 2024-05-24 16:00
 inline: true
 ---
 
-Check out our world model [Pandora](https://world-model.maitrix.org/)!
+Check out our world model 🪄[Pandora](https://world-model.maitrix.org/)!
