--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,16 @@
 ---
 ---
+ @misc{gou2025mind2web2,
+    title = {Mind2Web 2: Evaluating Agentic Search with Agent-as-a-Judge}, 
+    author = {Boyu Gou* and Zanming Huang* and Yuting Ning* and Yu Gu and Michael Lin and Weijian Qi and Andrei Kopanev and Botao Yu and Bernal Jiménez Gutiérrez and Yiheng Shu and Chan Hee Song and Jiaman Wu and Shijie Chen and Hanane Nour Moussa and Tianshu Zhang and Jian Xie and Yifei Li and Tianci Xue and Zeyi Liao and Kai Zhang and Boyuan Zheng and Zhaowei Cai and Viktor Rozgic and Morteza Ziyadi and Huan Sun and Yu Su},
+    year = {2025},
+    abbr={Preprint},
+    website = {https://osu-nlp-group.github.io/Mind2Web-2/},
+    pdf = {https://arxiv.org/pdf/2506.21506},
+    code = {https://github.com/OSU-NLP-Group/Mind2Web-2},
+    dataset = {https://huggingface.co/datasets/osunlp/Mind2Web-2},
+    selected = {true}
+}
 
 @article{gu2024your,
   title={Is Your LLM Secretly a World Model of the Internet? Model-Based Planning for Web Agents},
@@ -41,7 +52,6 @@
   pdf={https://world-model.maitrix.org/assets/pandora.pdf},
   website={https://world-model.maitrix.org/},
   abbr={Preprint},
-  selected={true},
   code={https://github.com/maitrix-org/Pandora},
 }
 
@@ -64,7 +74,6 @@
   code={https://github.com/INK-USC/LINK/},
   dataset={https://zenodo.org/records/10117911},
   abbr={EMNLP},
-  selected={true},
 }
 
 @inproceedings{ning2023towards,
