Mind2Web 2 acceptance

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,13 @@
 ---
 ---
 
-@misc{gou2025mind2web2,
-    title={Mind2Web 2: Evaluating Agentic Search with Agent-as-a-Judge}, 
-    author={Boyu Gou* and Zanming Huang* and Yuting Ning* and Yu Gu and Michael Lin and Weijian Qi and Andrei Kopanev and Botao Yu and Bernal Jiménez Gutiérrez and Yiheng Shu and Chan Hee Song and Jiaman Wu and Shijie Chen and Hanane Nour Moussa and Tianshu Zhang and Jian Xie and Yifei Li and Tianci Xue and Zeyi Liao and Kai Zhang and Boyuan Zheng and Zhaowei Cai and Viktor Rozgic and Morteza Ziyadi and Huan Sun and Yu Su},
+@inproceedings{
+    gou2025mindweb,
+    title={Mind2Web 2: Evaluating Agentic Search with Agent-as-a-Judge},
+    author={Boyu Gou* and Zanming Huang* and Yuting Ning* and Yu Gu and Michael Lin and Botao Yu and Andrei Kopanev and Weijian Qi and Yiheng Shu and Jiaman Wu and Chan Hee Song and Bernal Jimenez Gutierrez and Yifei Li and Zeyi Liao and Hanane Nour Moussa and TIANSHU ZHANG and Jian Xie and Tianci Xue and Shijie Chen and Boyuan Zheng and Kai Zhang and Zhaowei Cai and Viktor Rozgic and Morteza Ziyadi and Huan Sun and Yu Su},
+    booktitle={The Thirty-ninth Annual Conference on Neural Information Processing Systems Datasets and Benchmarks Track},
     year={2025},
-    journal={arXiv preprint arXiv:2506.21506},
-    abbr={Preprint},
+    abbr={NeurIPS},
     website={https://osu-nlp-group.github.io/Mind2Web-2/},
     pdf={https://arxiv.org/pdf/2506.21506},
     code={https://github.com/OSU-NLP-Group/Mind2Web-2},
@@ -44,7 +45,7 @@
 @article{xue2024decompose,
   title={Decompose, analyze and rethink: Solving intricate problems with human-like reasoning cycle},
   author={Xue, Shangzi and Huang, Zhenya and Liu, Jiayu and Lin, Xin and Ning, Yuting and Jin, Binbin and Li, Xin and Liu, Qi},
-  abbr={NeruIPS},
+  abbr={NeurIPS},
   journal={Advances in Neural Information Processing Systems},
   volume={37},
   pages={357--385},
