--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,7 +22,7 @@
   author={Gu*, Yu and Zhang*, Kai and Ning*, Yuting and Zheng*, Boyuan and Gou, Boyu and Xue, Tianci and Chang, Cheng and Srivastava, Sanjari and Xie, Yanan and Qi, Peng and others},
   journal={arXiv preprint arXiv:2411.06559},
   year={2025},
-  abbr={Preprint},
+  abbr={TMLR},
   pdf={https://arxiv.org/pdf/2411.06559},
   code={https://github.com/OSU-NLP-Group/WebDreamer},
   post={https://x.com/DrogoKhal4/status/1910295727466557791},
