--- a/_news/2025-09-18.md
+++ b/_news/2025-09-18.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-Glad to share 🔍 [Mind2Web 2](https://osu-nlp-group.github.io/Mind2Web-2/) is accepted to NeurIPS 2025! See you in San Diego 🌊!
+🔍[Mind2Web 2](https://osu-nlp-group.github.io/Mind2Web-2/) is accepted to NeurIPS 2025! See you in San Diego 🌊!
