--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
 @article{gu2024your,
   title={Is Your LLM Secretly a World Model of the Internet? Model-Based Planning for Web Agents},
   author={Gu*, Yu and Zhang*, Kai and Ning*, Yuting and Zheng*, Boyuan and Gou, Boyu and Xue, Tianci and Chang, Cheng and Srivastava, Sanjari and Xie, Yanan and Qi, Peng and others},
-  journal={arXiv preprint arXiv:2411.06559},
+  journal={Transactions on Machine Learning Research},
   year={2025},
   abbr={TMLR},
   pdf={https://arxiv.org/pdf/2411.06559},
