--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,7 +39,8 @@
   pdf={https://arxiv.org/pdf/2410.05080},
   code={https://github.com/OSU-NLP-Group/ScienceAgentBench},
   year={2025},
-  preview={ScienceAgentBench.png}
+  preview={ScienceAgentBench.png},
+  selected={true}
 }
 
 @article{xue2024decompose,
@@ -62,7 +63,8 @@
   website={https://world-model.maitrix.org/},
   abbr={Preprint},
   code={https://github.com/maitrix-org/Pandora},
-  preview={Pandora.png}
+  preview={Pandora.png},
+  selected={true}
 }
 
 @article{huang2024edunlp,
@@ -85,7 +87,8 @@
   code={https://github.com/INK-USC/LINK/},
   data={https://zenodo.org/records/10117911},
   abbr={EMNLP},
-  preview={LINK.png}
+  preview={LINK.png},
+  selected={true}
 }
 
 @inproceedings{ning2023towards,
@@ -96,12 +99,14 @@
   abbr={AAAI},
   pdf={https://arxiv.org/pdf/2301.07558.pdf},
   code={https://github.com/bigdata-ustc/QuesCo},
+  selected={true},
+  preview={QuesCo.png},
 }
 
 @article{ning2023novel,
   title={A Novel Approach for Auto-Formulation of Optimization Problems},
   author={Ning, Yuting and Liu, Jiayu and Qin, Longhu and Xiao, Tong and Xue, Shangzi and Huang, Zhenya and Liu, Qi and Chen, Enhong and Wu, Jinze},
-  journal={arXiv preprint arXiv:2302.04643},
+  journal={NeurIPS 2022 NL4Opt Competition},
   year={2023},
   pdf={https://arxiv.org/pdf/2302.04643.pdf},
   code={https://github.com/bigdata-ustc/nl4opt},
