--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @inproceedings{
     gou2025mindweb,
     title={Mind2Web 2: Evaluating Agentic Search with Agent-as-a-Judge},
-    author={Boyu Gou* and Zanming Huang* and Yuting Ning* and Yu Gu and Michael Lin and Botao Yu and Andrei Kopanev and Weijian Qi and Yiheng Shu and Jiaman Wu and Chan Hee Song and Bernal Jimenez Gutierrez and Yifei Li and Zeyi Liao and Hanane Nour Moussa and TIANSHU ZHANG and Jian Xie and Tianci Xue and Shijie Chen and Boyuan Zheng and Kai Zhang and Zhaowei Cai and Viktor Rozgic and Morteza Ziyadi and Huan Sun and Yu Su},
+    author={Boyu Gou* and Zanming Huang* and Yuting Ning* and Yu Gu and Michael Lin and Botao Yu and Andrei Kopanev and Weijian Qi and Yiheng Shu and Jiaman Wu and Chan Hee Song and Bernal Jimenez Gutierrez and Yifei Li and Zeyi Liao and Hanane Nour Moussa and Tianshu Zhang and Jian Xie and Tianci Xue and Shijie Chen and Boyuan Zheng and Kai Zhang and Zhaowei Cai and Viktor Rozgic and Morteza Ziyadi and Huan Sun and Yu Su},
     booktitle={The Thirty-ninth Annual Conference on Neural Information Processing Systems Datasets and Benchmarks Track},
     year={2025},
     abbr={NeurIPS},
@@ -29,6 +29,15 @@
   selected={true},
   preview={WebDreamer.png}
 }
+
+@article{zhang2025agent,
+  title={Agent Learning via Early Experience},
+  author={Zhang, Kai and Chen, Xiangchao and Liu, Bo and Xue, Tianci and Liao, Zeyi and Liu, Zhihan and Wang, Xiyao and Ning, Yuting and Chen, Zhaorun and Fu, Xiaohan and Xie, Jian and Sun, Yuxuan and Gou, Boyu and Qi, Qi and Meng, Zihang and Yang, Jianwei and Zhang, Ning and Li, Xian and Shah, Ashish and Huynh, Dat and Li, Hengduo and Yang, Zi and Cao, Sara and Jang, Lawrence and Zhou, Shuyan and Zhu, Jiacheng and Sun, Huan and Weston, Jason and Su, Yu and Wu, Yifan},
+  journal={arXiv preprint arXiv:2510.08558},
+  selected={true},
+  year={2025}
+}
+
 
 @article{chen2024scienceagentbench,
   title={ScienceAgentBench: Toward Rigorous Assessment of Language Agents for Data-Driven Scientific Discovery},
@@ -99,7 +108,6 @@
   abbr={AAAI},
   pdf={https://arxiv.org/pdf/2301.07558.pdf},
   code={https://github.com/bigdata-ustc/QuesCo},
-  selected={true},
   preview={QuesCo.png},
 }
 
