--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,7 +35,10 @@
   author={Zhang, Kai and Chen, Xiangchao and Liu, Bo and Xue, Tianci and Liao, Zeyi and Liu, Zhihan and Wang, Xiyao and Ning, Yuting and Chen, Zhaorun and Fu, Xiaohan and Xie, Jian and Sun, Yuxuan and Gou, Boyu and Qi, Qi and Meng, Zihang and Yang, Jianwei and Zhang, Ning and Li, Xian and Shah, Ashish and Huynh, Dat and Li, Hengduo and Yang, Zi and Cao, Sara and Jang, Lawrence and Zhou, Shuyan and Zhu, Jiacheng and Sun, Huan and Weston, Jason and Su, Yu and Wu, Yifan},
   journal={arXiv preprint arXiv:2510.08558},
   selected={true},
-  year={2025}
+  abbr={Preprint},
+  year={2025},
+  preview={early_experience.png},
+  pdf={https://arxiv.org/pdf/2510.08558},
 }
 
 
