--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,6 +30,19 @@
   preview={WebDreamer.png}
 }
 
+@article{liao2025redteamcua,
+  title={RedTeamCUA: Realistic Adversarial Testing of Computer-Use Agents in Hybrid Web-OS Environments},
+  author={Liao*, Zeyi and Jones*, Jaylen and Jiang*, Linxi and Ning, Yuting and Fosler-Lussier, Eric and Su, Yu and Lin, Zhiqiang and Sun, Huan},
+  journal={arXiv preprint arXiv:2505.21936},
+  year={2025},
+  abbr={Preprint},
+  pdf={https://arxiv.org/pdf/2505.21936},
+  code={https://github.com/OSU-NLP-Group/RedTeamCUA},
+  website={https://osu-nlp-group.github.io/RedTeamCUA},
+  selected={true},
+  preview={RedTeamCUA.png}
+}
+
 @article{zhang2025agent,
   title={Agent Learning via Early Experience},
   author={Zhang, Kai and Chen, Xiangchao and Liu, Bo and Xue, Tianci and Liao, Zeyi and Liu, Zhihan and Wang, Xiyao and Ning, Yuting and Chen, Zhaorun and Fu, Xiaohan and Xie, Jian and Sun, Yuxuan and Gou, Boyu and Qi, Qi and Meng, Zihang and Yang, Jianwei and Zhang, Ning and Li, Xian and Shah, Ashish and Huynh, Dat and Li, Hengduo and Yang, Zi and Cao, Sara and Jang, Lawrence and Zhou, Shuyan and Zhu, Jiacheng and Sun, Huan and Weston, Jason and Su, Yu and Wu, Yifan},
